--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,9 +52,94 @@ http {
     server {
         listen 80;
         server_name localhost ares.local;
-        
-        # Redirect HTTP to HTTPS
-        return 301 https://$server_name$request_uri;
+
+        # Root directory
+        root /usr/share/nginx/html;
+        index index.html;
+
+        # Frontend routes
+        location / {
+            try_files $uri $uri/ /index.html;
+            expires -1;
+            add_header Cache-Control "no-store, no-cache, must-revalidate";
+        }
+
+        # Static assets
+        location /static/ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # Uploads
+        location /uploads/ {
+            alias /uploads/;
+            expires 1h;
+            add_header Cache-Control "public";
+
+            # Security for uploads
+            location ~ \\.(php|exe|sh|bat)$ {
+                deny all;
+                return 403;
+            }
+        }
+
+        # API proxy
+        location /api/ {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+
+            # Timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+
+            # WebSocket support
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+        }
+
+        # WebSocket proxy
+        location /ws/ {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # WebSocket timeouts
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_connect_timeout 75s;
+        }
+
+        # Health check endpoint
+        location /health {
+            proxy_pass http://backend/health;
+            access_log off;
+        }
+
+        # Deny access to hidden files
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+
+        # Error pages
+        error_page 404 /index.html;
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
     }
     
     # HTTPS server
@@ -85,7 +170,7 @@ http {
         
         # Uploads
         location /uploads/ {
-            alias /usr/share/nginx/html/uploads/;
+            alias /uploads/;
             expires 1h;
             add_header Cache-Control "public";
             
