--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ DB_PASSWORD=KaaTTeeNN
 # Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_PASSWORD=redispass
 
 # Application
 JWT_SECRET=super_secret_jwt_key_change_this_in_production
@@ -18,7 +19,7 @@ API_KEY=ares-api-key-2023
 # Server
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8080
-ENABLE_TLS=true
+ENABLE_TLS=false
 TLS_CERT_PATH=/app/ssl/cert.pem
 TLS_KEY_PATH=/app/ssl/key.pem
 
