--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.14.2",
     "@mui/x-data-grid": "^6.9.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "ajv": "^8.12.0",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
